--- a/gestormanagementstyle.css
+++ b/gestormanagementstyle.css
@@ -61,6 +61,20 @@ button:hover {
     margin: 0 0.2rem;
 }
 
+.error {
+    color: red;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.success {
+    color: green;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
 /* Formulário */
 form {
     background: #fff;
@@ -68,7 +82,7 @@ form {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 2rem auto;
-    max-width: 600px;
+    max-width: 2000px;
 }
 
 form label {
