--- a/ProdutoDetalhes.css
+++ b/ProdutoDetalhes.css
@@ -35,13 +35,6 @@ body {
     margin-bottom: 10px;
 }
 
-.produto-info .descricao {
-    margin: 20px 0;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    color: #555;
-}
-
 .produto-info .preco {
     font-size: 1.5rem;
     font-weight: bold;
@@ -53,6 +46,46 @@ body {
     font-size: 1rem;
     margin: 10px 0;
     color: #777;
+}
+
+.produto-info .tamanhos {
+    margin-top: 20px;
+}
+
+.produto-info .tamanhos h3 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.produto-info .tamanhos select {
+    font-size: 1rem;
+    padding: 8px;
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 15px;
+}
+
+.produto-info .tamanhos button {
+    padding: 10px 20px;
+    background: #000000;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.produto-info .tamanhos button:hover {
+    background: #00000088;
+}
+
+.produto-info .tamanhos ul li {
+    font-size: 1rem;
+    color: #333;
+    background: #f1f1f1;
+    padding: 5px 10px;
+    margin: 5px 0;
+    border-radius: 5px;
 }
 
 .btn-adicionar {
